<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_page_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="15dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/iv_page_detail"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shapeAppearanceOverlay="@style/roundedImageView" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tv_title_page_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="5dp"
                    android:text="@string/page_item_title"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_study_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_title_page_detail"
                    android:layout_marginStart="5dp"
                    android:text="@string/page_item_study_date"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_study_date_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_title_page_detail"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/tv_study_date"
                    android:textSize="16sp"
                    tools:text="@string/page_item_study_date_value" />

                <TextView
                    android:id="@+id/tv_industry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_study_date"
                    android:layout_marginStart="5dp"
                    android:text="@string/page_item_industry"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_industry_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_study_date"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/tv_industry"
                    android:textSize="16sp"
                    tools:text="@string/page_item_industry_name" />

                <TextView
                    android:id="@+id/tv_reviewer_page_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_industry"
                    android:layout_marginStart="5dp"
                    android:text="@string/page_item_reviewer"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/tv_reviewer_name_page_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tv_industry"
                    android:layout_marginStart="5dp"
                    android:layout_toEndOf="@+id/tv_reviewer_page_detail"
                    android:textSize="16sp"
                    tools:text="@string/page_item_reviewer_name" />
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="10sp"
                android:background="@android:color/darker_gray" />

            <TextView
                android:id="@+id/tv_content_page_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:layout_marginTop="20sp"
                android:layout_marginRight="10sp"
                android:layout_marginBottom="10sp"
                android:lineSpacingExtra="5dp"
                android:text="@string/page_item_content"
                android:textSize="14sp" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>